test: update sample retrieval in shouldAnd method of SelectFromWhereCompositeConditionTest